# ai_document_helper

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0dc8e2a0cb8a_add_document_insights_table.py  55694c3f5cdd_change_embedding_dimension_to_384.py  80823fd012b6_add_document_chunks_table_with_pgvector.py  a23fa09e7c11_add_document_ids_to_chat_sessions_for_.py  ad3336a64e49_add_processing_metrics_table.py  b684cabe47e6_create_documents_table.py  cc2e3c4bc0e4_add_chat_sessions_and_chat_messages_.py  d4997e2e6244_add_version_to_documents.py
app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py
app/api/: chat.py  documents.py  health.py  insights.py  metrics.py
app/models/: __init__.py  chat.py  document.py  insight.py  metrics.py
app/prompts/: analysis.py  chat_qa.py  comparison.py
app/schemas/: chat.py  document.py  insight.py  metrics.py
app/services/: ai_service.py  cache_service.py  chat_service.py  document_service.py  embedding_service.py  metrics_service.py  processing_service.py  storage_service.py
app/tasks/: __init__.py  document_tasks.py
static/: index.html
tests/: conftest.py  test_chat.py  test_documents.py  test_health.py  test_insights.py  test_metrics.py
