[project]
name = "ai-document-helper"
version = "0.1.0"
description = "AI-Powered Vault Document System - Chat with your documents using RAG"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "flower>=2.0.0",

    # AI / LLM
    "anthropic>=0.39.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",

    # Document processing
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # Config & utilities
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",

    # Cloud storage (optional at runtime — only used when STORAGE_BACKEND=gcs)
    "google-cloud-storage>=2.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100
